4B/cs444/tests/pass/pass_nativeint.joos
/* pass: restricted static native int m(int) */
  public class A {
    public static native int m(int i);
  }

