4B/cs444/tests/fail/fail_native.joos
/* fail: general native methods */
  public class A {
    public native int m();
  }

